--- a/planer/templates/planer/route_list.html
+++ b/planer/templates/planer/route_list.html
@@ -1,14 +1,60 @@
 {% extends 'planer/base.html' %}
 
 {% block content %}
-<h2>Your Routes</h2>
+<h2>Your Paths</h2>
 <ul>
-    {% for route in routes %}
+    {% for path in user_paths %}
         <li>
-            {{ route.name }} - 
-            <a href="{% url 'edit_and_view_route' route.id %}">Edit</a>
+            {{ path.name }} ({{ path.board.name }}, {{ path.path|length }} steps)
+            <a href="{% url 'draw_path' path.board.id %}?path_id={{ path.id }}">Edit Path</a>
         </li>
+    {% empty %}
+        <li>No paths yet.</li>
     {% endfor %}
 </ul>
-<a href="{% url 'create_route' %}">Create New Route</a>
+
+<h2>Your Boards</h2>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Dimensions</th>
+        <th>Actions</th>
+    </tr>
+    {% for board in boards %}
+    <tr>
+        <td>{{ board.name }}</td>
+        <td>{{ board.rows }} x {{ board.cols }}</td>
+        <td>
+            <a href="{% url 'edit_board' board.id %}">Edit</a>
+            <a href="{% url 'delete_board' board.id %}">Delete</a>
+            <a href="{% url 'draw_path' board.id %}">New Path</a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+<a href="{% url 'create_board' %}">Create New Board</a>
+
+<h2>Other Users' Boards</h2>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Dimensions</th>
+        <th>Owner</th>
+        <th>Actions</th>
+    </tr>
+    {% for board in other_boards %}
+    <tr>
+        <td>{{ board.name }}</td>
+        <td>{{ board.rows }} x {{ board.cols }}</td>
+        <td>{{ board.user.username }}</td>
+        <td>
+            <a href="{% url 'draw_path' board.id %}">New Path</a>
+        </td>
+    </tr>
+    {% empty %}
+    <tr>
+        <td colspan="4"><em>No boards from other users.</em></td>
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
